<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/Lbl_One" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TClock"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/RG_One"
        android:showDividers="beginning|middle|end"
        android:clickable="true"
        android:layout_above="@+id/TView_Main"
        android:layout_toStartOf="@+id/iView">

        <RadioButton
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/RBut_01"
            android:id="@+id/RBut_01"
            android:checked="true" />

        <RadioButton
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/RBut_02"
            android:id="@+id/RBut_02" />

        <RadioButton
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/RBut_03"
            android:id="@+id/RBut_03" />

        <RadioButton
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:text="@string/RBut_04"
            android:id="@+id/RBut_04"
            android:longClickable="true" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TView_Main"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minLines="20" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="130dp"
        android:id="@+id/iView"
        android:layout_alignTop="@+id/RG_One"
        android:layout_alignLeft="@+id/TClock"
        android:layout_alignStart="@+id/TClock"
        android:src="@android:drawable/btn_star_big_on"
        android:clickable="true" />

</RelativeLayout>
